[package]
name = "controller-trigger-recorder"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AntoniosBarotsis/controller-trigger-recorder"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular-queue = "0.2.6"
ctrlc = { version = "3.4.1", features = ["termination"] }
eframe = "0.27.0"
egui = "0.27.0"
egui_extras = "0.27.0"
egui_plot = "0.27.0"
gilrs = { version = "0.10.4", default-features=false, features = ["xinput"] }
